3B - NEW_DESIGN - OUTLET_MOBILE - add outlet page

--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -49,6 +49,7 @@ a {text-decoration: none;}
 .home-mobile .btn.btn-gradient {background: linear-gradient(87.62deg, #EC5229 16.73%, #FF814E 83.07%);}
 .home-mobile .btn.btn-border-g {background: transparent;border: 1px solid #219653;color: #219653;padding: 6px 12px;border-radius: 3px;}
 .home-mobile .btn.btn-border-b {background: transparent;border: 1px solid #3F241D;color: #3F241D;}
+.home-mobile .btn.btn-border-r {background: transparent;border: 1px solid #EC5229;color: #EC5229;}
 .home-mobile .btn.btn-purple {border-radius: 4px;background: #C563EA;padding: 8px 6px;font-size: 13px;}
 .home-mobile .btn.btn-flashsale {padding: 4px 20px;border-radius: 3px;font-weight: 500;font-size: 13px;}
 .home-mobile .btn.btn-flashsale span {display: block;font-weight: normal;font-size: 12px;}
@@ -689,6 +690,39 @@ a {text-decoration: none;}
 .home-mobile .store-home-page .list-cat-2 {padding-bottom: 0;margin-bottom: 15px;border-bottom: 0;}
 .home-mobile .store-home-page .last-section .actions {align-items: center;justify-content: center;width: auto;}
 .home-mobile .store-home-page .filter.boxes > div {width: 49%;}
+.home-mobile .outlet-page {}
+.home-mobile .outlet-page .filter-bl-2 {position: relative;padding: 9px;}
+.home-mobile .outlet-page .filter-bl-2 .filter-control {width: max-content;}
+.home-mobile .outlet-page .filter-bl-2 .filter-control li {}
+.home-mobile .outlet-page .filter-bl-2 .filter-control li a {font-size: 13px;line-height: 18px;color: #333333;padding: 4px 10px;background: #F2F2F2;border-radius: 6px;margin-right: 6px;display: block;}
+.home-mobile .outlet-page .filter-bl-2 .filter-control li a i {margin-left: 6px;color: #BDBDBD;}
+.home-mobile .outlet-page .filter-bl-2 .filter {position: absolute;top: 44px;left: 0;right: 0;background: #FFFFFF;z-index: 99;padding: 16px;display: none;box-shadow: 0 5px 8px rgba(0, 0, 0, .2);}
+.home-mobile .outlet-page .filter-bl-2 .filter.active {display: block;}
+.home-mobile .outlet-page .filter-bl-2 .filter .list-cat-2 {border-bottom: none;padding-bottom: 0;margin-bottom: 20px;}
+.home-mobile .outlet-page .filter-bl-2 .filter .list-cat-2 ul {justify-content: space-between;}
+.home-mobile .outlet-page .filter-bl-2 .filter .list-cat-2 li {width: 49%;margin-right: 0;}
+.home-mobile .outlet-page .filter-bl-2 .filter-btn {justify-content: space-between;}
+.home-mobile .outlet-page .filter-bl-2 .filter-btn .btn {padding: 12px 30px;border-radius: 4px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.brands ul {flex-wrap: wrap;}
+.home-mobile .outlet-page .filter-bl-2 .filter.brands ul li {margin-right: 0;margin-bottom: 8px;border: none;padding: 0;width: 110px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.brands ul li label {font-weight: 300;font-size: 16px;line-height: 30px;text-transform: uppercase;}
+.home-mobile .outlet-page .filter-bl-2 .filter.brands ul li a {display: block;padding: 8px 20px;border: 1px solid #E0E0E0;border-radius: 8px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.brands ul li a.active {border-color: #E02E24;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size {padding: 0;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-bl {align-items: flex-start;background: #F2F2F2;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .filter-btn {padding: 20px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-nav {display: flex;flex-direction: column;width: 120px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-nav a {display: block;padding: 18px;background: #F2F2F2;text-align: center;color: #333333;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-nav a.active {background: #FFFFFF;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-nav a img {width: 36px;height: 36px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .size-nav a label {font-size: 14px;line-height: 26px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size {padding: 16px;width: 68%;background: #FFFFFF;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size h4 {text-align: center;font-weight: normal;font-size: 14px;line-height: 30px;margin-bottom: 31px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul {display: flex;align-items: center;justify-content: space-between;flex-wrap: wrap;margin-bottom: 32px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul li {width: 70px;margin-bottom: 8px;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul li a {display: block;background: #F2F2F2;text-align: center;padding: 8px;font-size: 14px;line-height: 22px;border-radius: 4px;color: #333333;}
+.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul li a.active {background: #FFFFFF;border: 1px solid #E02E24;}
+
 
 @media screen and (max-width: 640px) {
 	.home-mobile .header-content .featured ul li {width: 25%;}
@@ -792,6 +826,8 @@ a {text-decoration: none;}
 	.home-mobile .modal .modal-content .head .p-info > .boxes {flex-wrap: wrap;}
 
 	.home-mobile .store-home-page .s-voucher .promote {width: auto;}
+
+	.home-mobile .outlet-page .filter-bl-2 .filter.size .list-size ul li {width: 50px;}
 }
 
 @media only screen and (max-device-width: 480px) { 
