--- a/3B-WEB/assets/base/mobile.css
+++ b/3B-WEB/assets/base/mobile.css
@@ -690,6 +690,11 @@ a {text-decoration: none;}
 .home-mobile .store-home-page .list-cat-2 {padding-bottom: 0;margin-bottom: 15px;border-bottom: 0;}
 .home-mobile .store-home-page .last-section .actions {align-items: center;justify-content: center;width: auto;}
 .home-mobile .store-home-page .filter.boxes > div {width: 49%;}
+.home-mobile .store-home-page .list-category {}
+.home-mobile .store-home-page .list-category li {margin-bottom: 8px;}
+.home-mobile .store-home-page .list-category li a {color: #3F241D;display: flex;align-items: center;}
+.home-mobile .store-home-page .list-category li a img {width: 38px;height: 38px;border-radius: 4px;margin-right: 8px;}
+.home-mobile .store-home-page .list-category li a label {font-size: 14px;line-height: 26px;}
 .home-mobile .outlet-page {}
 .home-mobile .outlet-page .filter-bl-2 {position: relative;padding: 9px;}
 .home-mobile .outlet-page .filter-bl-2 .filter-control {width: max-content;}
